--- a/index.html
+++ b/index.html
@@ -365,20 +365,20 @@
                 <div class="contact__container grid">
                     <div class="contact__box">
                         <h2 class="section__title">
-                            Reach out to us today <br> via any of the given <br> information
+                            Hubungi kami <br> melalui layanan <br> informasi
                         </h2>
 
                         <div class="contact__data">
                             <div class="contact__information">
-                                <h3 class="contact__subtitle">Call us for instant support</h3>
+                                <h3 class="contact__subtitle">Telfon layanan kami</h3>
                                 <span class="contact__description">
                                     <i class="ri-phone-line contact__icon"></i>
-                                    +999 888 777
+                                    08- aja terus
                                 </span>
                             </div>
 
                             <div class="contact__information">
-                                <h3 class="contact__subtitle">Write us by mail</h3>
+                                <h3 class="contact__subtitle">Kirim email disini</h3>
                                 <span class="contact__description">
                                     <i class="ri-mail-line contact__icon"></i>
                                     eksporKuy@email.com
@@ -406,7 +406,7 @@
                         </div>
 
                         <button class="button button--flex">
-                            Send Message
+                            Mau kirim pesan
                             <i class="ri-arrow-right-up-line button__icon"></i>
                         </button>
                     </form>
@@ -423,25 +423,25 @@
                     </a>
 
                     <h3 class="footer__title">
-                        Subscribe to our newsletter <br> to stay update
+                        Ayo Jaoin untuk <br> Memajukan UMKM
                     </h3>
 
                     <div class="footer__subscribe">
                         <input type="email" placeholder="Enter your email" class="footer__input">
 
                         <button class="button button--flex footer__button">
-                            Subscribe
+                            Joinkuy
                             <i class="ri-arrow-right-up-line button__icon"></i>
                         </button>
                     </div>
                 </div>
 
                 <div class="footer__content">
-                    <h3 class="footer__title">Our Address</h3>
+                    <h3 class="footer__title">Alamat Kami</h3>
 
                     <ul class="footer__data">
-                        <li class="footer__information">1234 - Peru</li>
-                        <li class="footer__information">La Libertad - 43210</li>
+                        <li class="footer__information">1234 - Serang</li>
+                        <li class="footer__information">Ciraca Lama - 43210</li>
                         <li class="footer__information">123-456-789</li>
                     </ul>
                 </div>
